@@ -2,9 +2,12 @@ $Id$
 
 2008-12-30 Maarten ter Huurne <maarten@treewalker.org>
     * Have a single file (version.txt) that contains the version number.
+    * Keep interrupt enabled during data transfer phase of FILVRM.
+      Fixes startup problems of Penguin Adventure.
     * Released C-BIOS 0.23.
 
 2008-12-30 Albert Beevendorp
+    * Modified MSX1 logo data so it easier to insert the version number.
     * Added ret on address EXTROM on MSX1. Fixes Nemesis 3 reset.
 
 2008-12-27 Maarten ter Huurne <maarten@treewalker.org>
